--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,8 +1,8 @@
-node{
-stage('SCM'){
-  git https://github.com/yaswanthala/ecommapp.git 
+node  {
+  stage('SCM'){
+    git 'https://github.com/yaswanthala/ecommapp.git' 
   }
-stage('pwd'){
-  sh pwd
+  stage('pwd'){
+    sh 'pwd'
   }
 }
